--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         // Verificar se o código de autorização está presente
         if (authCode) {
             // Construir a URL de redirecionamento com o código de autorização
-            let redirectUrl = 'http://moterif.42web.io/?code=' + encodeURIComponent(authCode);
+            let redirectUrl = 'https://neipol-online.github.io/MP/?code=' + encodeURIComponent(authCode);
             // Redirecionar para a URL com o código de autorização
             window.location.href = redirectUrl;
         } else {
