--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             window.location.href = redirectUrl;
         } else {
             // Se o código não está presente, exiba uma mensagem de erro
-            document.body.innerHTML = '<h1>Código de autorização não encontrado.</h1>';
+            document.body.innerHTML = '<h1>Código de autorização não encontrado V4.</h1>';
         }
     </script>
 </body>
